--- a/index.html
+++ b/index.html
@@ -1,4 +1,12 @@
-<!DOCTYPE html>
+</main>
+
+    <footer>
+        <p>FreeMind © 2025 – All Rights Reserved</p>
+    </footer>
+
+    <script src="app.js"></script>
+</body>
+</html><!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8" />
