--- a/index.html
+++ b/index.html
@@ -1,23 +1,48 @@
-</main>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
+    <title>FreeMind | Break the Chains</title>
+
+    <link rel="stylesheet" href="style.css" />
+</head>
+
+<body>
+
+    <!-- YOUR HEADER -->
+    <header>
+        <h1>FreeMind</h1>
+        <p>A safe place to break addiction and regain control</p>
+    </header>
+
+
+
+    <!-- YOUR MAIN CONTENT GOES HERE -->
+    <main id="bigMT">
+
+        <h2>Welcome to FreeMind</h2>
+
+        <p>You are not alone. This app helps you take daily steps towards freedom, clarity, and purpose.</p>
+
+        <button id="dailyBtn">Daily Motivation</button>
+
+        <p id="dailyText"></p>
+
+    </main>
+
+
+
+    <!-- YOUR FOOTER -->
     <footer>
         <p>FreeMind © 2025 – All Rights Reserved</p>
     </footer>
 
+
+
+    <!-- LINK TO JS -->
     <script src="app.js"></script>
+
 </body>
-</html><!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>Free-Mind | Break the Chains</title>
-
-    <!-- Link to CSS -->
-    <link rel="stylesheet" href="style.css" />
-</head>
-<body>
-
-<header>
-    <h1>Free-Mind</h1>
-    <p>A safe place to break addiction and regain control
+</html>
