--- a/index.html
+++ b/index.html
@@ -2,46 +2,64 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <title>FreeMind | Break the Chains</title>
+
+    <!-- ArcGIS MAP CSS -->
+    <link rel="stylesheet" href="https://js.arcgis.com/4.29/esri/themes/dark/main.css">
 
     <link rel="stylesheet" href="style.css" />
 </head>
 
 <body>
 
-    <!-- YOUR HEADER -->
+    <!-- HEADER -->
     <header>
         <h1>FreeMind</h1>
         <p>A safe place to break addiction and regain control</p>
+
+        <!-- USERNAME DISPLAY -->
+        <p id="usernameDisplay" class="username-box">Guest</p>
     </header>
 
+    <!-- NAVIGATION -->
+    <nav>
+        <a href="home.html" class="nav-link">Home</a>
+        <a href="motivation.html" class="nav-link">Motivation</a>
+        <a href="map.html" class="nav-link">Map</a>
+        <a href="profile.html" class="nav-link">Profile</a>
+    </nav>
 
+    <!-- MAIN APP CONTAINER -->
+    <main id="appContainer">
 
-    <!-- YOUR MAIN CONTENT GOES HERE -->
-    <main id="bigMT">
+        <!-- DEFAULT HOME PAGE -->
+        <section id="homePage">
+            <h2>Welcome to FreeMind</h2>
+            <p>You are not alone. This app helps you take daily steps towards freedom, clarity, and purpose.</p>
 
-        <h2>Welcome to FreeMind</h2>
+            <button id="dailyBtn">Daily Motivation</button>
+            <p id="dailyText"></p>
 
-        <p>You are not alone. This app helps you take daily steps towards freedom, clarity, and purpose.</p>
+            <button id="saveProgress">Save Progress</button>
+            <button id="resetProgress">Reset App</button>
+        </section>
 
-        <button id="dailyBtn">Daily Motivation</button>
-
-        <p id="dailyText"></p>
+        <!-- MAP DIV (hidden until map page loads) -->
+        <div id="viewDiv" style="width:100%; height:400px; display:none;"></div>
 
     </main>
 
-
-
-    <!-- YOUR FOOTER -->
+    <!-- FOOTER -->
     <footer>
         <p>FreeMind © 2025 – All Rights Reserved</p>
     </footer>
 
+    <!-- ArcGIS MAP JS -->
+    <script src="https://js.arcgis.com/4.29/"></script>
 
-
-    <!-- LINK TO JS -->
+    <!-- YOUR MAIN APP SCRIPT -->
     <script src="app.js"></script>
 
 </body>
