--- a/index.html
+++ b/index.html
@@ -1,66 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8" />
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-    <title>FreeMind | Break the Chains</title>
-
-    <!-- ArcGIS MAP CSS -->
-    <link rel="stylesheet" href="https://js.arcgis.com/4.29/esri/themes/dark/main.css">
-
-    <link rel="stylesheet" href="style.css" />
+    <title>FreeMind App</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-
-    <!-- HEADER -->
     <header>
-        <h1>FreeMind</h1>
-        <p>A safe place to break addiction and regain control</p>
-
-        <!-- USERNAME DISPLAY -->
-        <p id="usernameDisplay" class="username-box">Guest</p>
+        <h1>Welcome to FreeMind</h1>
+        <p>Your journey to freedom starts here.</p>
     </header>
 
-    <!-- NAVIGATION -->
-    <nav>
-        <a href="home.html" class="nav-link">Home</a>
-        <a href="motivation.html" class="nav-link">Motivation</a>
-        <a href="map.html" class="nav-link">Map</a>
-        <a href="profile.html" class="nav-link">Profile</a>
+    <nav class="menu">
+        <ul>
+            <li><a href="home.html">Home</a></li>
+            <li><a href="map.html">Recovery Map</a></li>
+            <li><a href="motivation.html">Motivation</a></li>
+            <li><a href="profile.html">Profile</a></li>
+        </ul>
     </nav>
 
-    <!-- MAIN APP CONTAINER -->
-    <main id="appContainer">
+    <section class="main-content">
+        <h2>Start Your Journey</h2>
+        <p>Select a page above to begin exploring FreeMind.</p>
+    </section>
 
-        <!-- DEFAULT HOME PAGE -->
-        <section id="homePage">
-            <h2>Welcome to FreeMind</h2>
-            <p>You are not alone. This app helps you take daily steps towards freedom, clarity, and purpose.</p>
-
-            <button id="dailyBtn">Daily Motivation</button>
-            <p id="dailyText"></p>
-
-            <button id="saveProgress">Save Progress</button>
-            <button id="resetProgress">Reset App</button>
-        </section>
-
-        <!-- MAP DIV (hidden until map page loads) -->
-        <div id="viewDiv" style="width:100%; height:400px; display:none;"></div>
-
-    </main>
-
-    <!-- FOOTER -->
     <footer>
-        <p>FreeMind © 2025 – All Rights Reserved</p>
+        <p>© 2025 FreeMind. All rights reserved.</p>
     </footer>
-
-    <!-- ArcGIS MAP JS -->
-    <script src="https://js.arcgis.com/4.29/"></script>
-
-    <!-- YOUR MAIN APP SCRIPT -->
-    <script src="app.js"></script>
-
 </body>
 </html>
