--- a/map.html
+++ b/map.html
@@ -1,6 +1,27 @@
-<section id="mapPage">
-    <h2>Recovery Map</h2>
-    <p>This map visualizes your journey and helps you stay grounded.</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Recovery Map – FreeMind</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
 
-    <div id="viewDiv" style="width: 100%; height: 400px;"></div>
-</section>
+<header class="topbar">
+    <h1>Recovery Map</h1>
+</header>
+
+<div class="container">
+    <section class="card">
+        <h2>Your Progress Path</h2>
+        <p>This section will track your progress, habits, streaks, victories, and goals.</p>
+    </section>
+</div>
+
+<footer class="footer">
+    © 2025 FreeMind
+</footer>
+
+</body>
+</html>
