--- a/profile.html
+++ b/profile.html
@@ -1,10 +1,27 @@
-<section id="profilePage">
-    <h2>Your Profile</h2>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Your Profile – FreeMind</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
 
-    <p><strong>Username:</strong> <span id="usernameDisplay">Guest</span></p>
+<header class="topbar">
+    <h1>Your Profile</h1>
+</header>
 
-    <h3>Progress</h3>
-    <p>Your saved streak and recovery updates will appear soon.</p>
+<div class="container">
+    <section class="card">
+        <h2>Journal</h2>
+        <textarea placeholder="Write your thoughts here..." class="journal-box"></textarea>
+    </section>
+</div>
 
-    <button id="resetProgress">Reset All Data</button>
-</section>
+<footer class="footer">
+    © 2025 FreeMind
+</footer>
+
+</body>
+</html>
