--- a/home.html
+++ b/home.html
@@ -1,52 +1,33 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Home — FreeMind</title>
+  <meta charset="utf-8"/>
+  <meta name="viewport" content="width=device-width,initial-scale=1"/>
+  <title>FreeMind — Home</title>
   <link rel="stylesheet" href="style.css" />
 </head>
-<body>
-  <header class="topbar small">
-    <div class="topbar-inner">
-      <h1 class="brand small">FreeMind</h1>
-    </div>
-  </header>
+<body class="theme-light-1 page-full">
 
   <main class="container">
+    <header class="topbar small">
+      <h1 class="huge">FreeMind</h1>
+      <p class="lead">A safe place to break addiction and regain control.</p>
+    </header>
+
     <section class="card">
-      <h2 class="page-title">Welcome</h2>
-      <p class="lead">This is your safe space. Below are fast links to the tools that help when temptation comes.</p>
+      <h2>Daily snapshot</h2>
+      <p class="muted">Track your progress, read a short motivation and stay connected to your recovery routine.</p>
 
       <div class="grid">
-        <a class="tile" href="motivation.html">Motivation</a>
-        <a class="tile" href="emergency.html">Emergency Mode</a>
-        <a class="tile" href="tracker.html">Tracker</a>
-        <a class="tile" href="verses.html">Bible Verses</a>
-        <a class="tile" href="goals.html">Daily Goals</a>
-        <a class="tile" href="profile.html">Journal</a>
+        <a class="card-link" href="motivation.html">Daily Motivation</a>
+        <a class="card-link" href="tracker.html">Recovery Tracker</a>
+        <a class="card-link" href="prayer.html">Prayer Engine</a>
       </div>
-    </section>
-
-    <section class="card">
-      <h3>Quick Guide</h3>
-      <ol>
-        <li>When tempted: open <strong>Emergency Mode</strong>.</li>
-        <li>After the crisis, log in <strong>Tracker</strong>.</li>
-        <li>Daily: tap <strong>Motivation</strong> and save a small goal.</li>
-      </ol>
     </section>
   </main>
 
-  <footer class="footer">
-    <p>© 2025 FreeMind</p>
-  </footer>
+  <footer class="footer small">© FreeMind — 2025</footer>
 
   <script src="app.js" defer></script>
 </body>
 </html>
-<div id="voice-controls" style="position: fixed; bottom: 20px; left: 50%; transform: translateX(-50%); background: white; padding: 10px 20px; border-radius: 10px; box-shadow: 0 4px 10px rgba(0,0,0,0.2);">
-    <button onclick="playAudio()">🔊 Play</button>
-    <button onclick="pauseAudio()">⏸ Pause</button>
-    <button onclick="stopAudio()">⏹ Stop</button>
-</div>
