--- a/motivation.html
+++ b/motivation.html
@@ -1,47 +1,49 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Motivation — FreeMind</title>
-  <link rel="stylesheet" href="style.css" />
+  <meta charset="utf-8"/>
+  <meta name="viewport" content="width=device-width,initial-scale=1"/>
+  <title>Daily Motivation — FreeMind</title>
+  <link rel="stylesheet" href="style.css"/>
 </head>
-<body>
-  <header class="topbar small">
-    <div class="topbar-inner">
-      <h1 class="brand small">Daily Motivation</h1>
-    </div>
-  </header>
+<body class="theme-light-1 page-full">
 
   <main class="container">
-    <section class="card">
-      <h2>Tap for encouragement</h2>
-      <p id="motivationOutput" class="output-text">Press the button for a message.</p>
-      <div class="center">
-        <button id="motivateBtn" class="btn action">Give Me Motivation</button>
-      </div>
-    </section>
+    <header class="topbar small">
+      <h1 class="huge">Daily Motivation</h1>
+      <p class="lead">Short, science-backed prompts to help you stay focused.</p>
+    </header>
 
     <section class="card">
-      <h3>Categories</h3>
-      <div class="chips">
-        <button class="chip" data-category="faith">Faith</button>
-        <button class="chip" data-category="discipline">Discipline</button>
-        <button class="chip" data-category="purpose">Purpose</button>
-        <button class="chip" data-category="recovery">Recovery</button>
+      <p id="motivationText" class="big"></p>
+
+      <div class="center">
+        <button id="newMotivation" class="btn">New Motivation</button>
+        <button id="playMotivation" class="btn alt">🔊 Read Aloud</button>
       </div>
     </section>
   </main>
 
-  <footer class="footer">
-    <p>© FreeMind</p>
-  </footer>
+  <footer class="footer small">FreeMind • Motivation</footer>
 
   <script src="app.js" defer></script>
+  <script>
+    // lightweight per-page initialization (app.js will still handle voice)
+    document.addEventListener('DOMContentLoaded', function () {
+      const list = [
+        "Small daily wins create big change. Start with 5 minutes today.",
+        "Breathe slowly for 60 seconds — then choose one healthy action.",
+        "You are not defined by your urges. You are defined by the choices you make."
+      ];
+      const el = document.getElementById('motivationText');
+      function setMotivation() {
+        el.textContent = list[Math.floor(Math.random()*list.length)];
+      }
+      setMotivation();
+      document.getElementById('newMotivation').onclick = setMotivation;
+      document.getElementById('playMotivation').onclick = () =>
+        window.voiceSpeak(el.textContent || "Stay strong — try again.");
+    });
+  </script>
 </body>
 </html>
-<div id="voice-controls" style="position: fixed; bottom: 20px; left: 50%; transform: translateX(-50%); background: white; padding: 10px 20px; border-radius: 10px; box-shadow: 0 4px 10px rgba(0,0,0,0.2);">
-    <button onclick="playAudio()">🔊 Play</button>
-    <button onclick="pauseAudio()">⏸ Pause</button>
-    <button onclick="stopAudio()">⏹ Stop</button>
-</div>
