--- a/streak.html
+++ b/streak.html
@@ -1,27 +1,50 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <meta charset="utf-8"/>
+  <meta name="viewport" content="width=device-width,initial-scale=1"/>
   <title>Streak — FreeMind</title>
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="style.css"/>
 </head>
-<body>
-  <header class="topbar small"><div class="topbar-inner"><h1 class="brand small">Streak Counter</h1></div></header>
+<body class="theme-light-2 page-full">
 
   <main class="container">
+    <header class="topbar small">
+      <h1 class="huge">Recovery Streak</h1>
+      <p class="lead">Celebrate each day you choose progress.</p>
+    </header>
+
     <section class="card">
-      <h2>Your Current Streak</h2>
-      <p class="big" id="streakCount">0 days</p>
+      <p>Your current streak: <strong id="streakDays">0</strong> days</p>
       <div class="center">
-        <button id="checkIn" class="btn">Check-in (I stayed clean today)</button>
-        <button id="resetStreak" class="btn ghost">Reset Streak</button>
+        <button id="incStreak" class="btn">Add Day</button>
+        <button id="resetStreak" class="btn alt">Reset</button>
       </div>
     </section>
   </main>
 
-  <footer class="footer">© FreeMind</footer>
+  <footer class="footer small">FreeMind • Streak</footer>
 
   <script src="app.js" defer></script>
+  <script>
+    document.addEventListener('DOMContentLoaded', () => {
+      const el = document.getElementById('streakDays');
+      const stored = localStorage.getItem('freemind.streak') || '0';
+      el.textContent = stored;
+      document.getElementById('incStreak').onclick = () => {
+        let n = Number(el.textContent || 0) + 1;
+        el.textContent = n;
+        localStorage.setItem('freemind.streak', String(n));
+        window.voiceSpeak("Great work — your streak increased to " + n + " days.");
+      };
+      document.getElementById('resetStreak').onclick = () => {
+        if (confirm('Reset streak?')) {
+          localStorage.setItem('freemind.streak', '0');
+          el.textContent = '0';
+          window.voiceSpeak("Streak reset. Focus on the next step.");
+        }
+      };
+    });
+  </script>
 </body>
 </html>
