--- a/map.html
+++ b/map.html
@@ -100,7 +100,7 @@
 // ======================================
 // CONFIG
 // ======================================
-const ORS_API_KEY = "YOUR_KEY_HERE"; // ← paste your real key
+const ORS_API_KEY = "YOUR_KEY_HER real keyeyeyJvcmciOiI1YjNjZTM1OTc4NTExMTAwMDFjZjYyNDgiLCJpZCI6ImExYWY4ZTgyZWYwYzRhYWRhMDVhNWQ5OGM4NTg3MjEwIiwiaCI6Im11cm11cjY0In0=JvcmciOiI1YjNjZTM1OTc4NTExMTAwMDFjZjYyNDgiLCJpZCI6ImExYWY4ZTgyZWYwYzRhYWRhMDVhNWQ5OGM4NTg3MjEwIiwiaCI6Im11cm11cjY0In0=
 
 let map = L.map('map').setView([0.0236, 37.9062], 7);
 let userMarker, destMarker, routeLine;
